syntax = "proto3";
option csharp_namespace = "BlazorBoilerplate.Server";

import "Enumerations.proto";
import "Miscellaneous.proto";


message DeleteModelRequest {
  string userIdentifier = 1;
  string modelIdentifier = 2;
}

message DeleteModelResponse {
  
}

message GetModelsRequest {
  string userIdentifier = 1;
  string datasetIdentifer = 2;
}

message GetModelsResponse {
  repeated Model models = 1;
}

message GetModelRequest {
  string userIdentifier = 1;
  string modelIdentifier = 2;
}

message GetModelResponse {
  Model model = 1;
}

message Model {
  string identifier = 1;
  string trainingIdentifier = 2;
  float testScore = 3;
  int32 runtime = 4;
  string mlModelType = 5;
  string mlLibrary = 6;
  string status = 7;
  repeated string statusMessages = 8;
  float predictionTime = 9;
  string automl = 10;
  string datasetIdentifier = 11;
  string explanation = 12;
}

message ModelPredictRequest {
  string userIdentifier = 1;
  bytes testData = 2;
  string modelIdenfier = 3;
}

message ModelPredictResponse {
  repeated string predictions = 1;
  float predictiontime = 2;
}

